syntax = "proto3";
package airbloc.schemas;

option go_package = "github.com/airbloc/airbloc-go/schemas";

service Schema {
    rpc Create(CreateSchemaRequest) returns (CreateSchemaResult);
}

message CreateSchemaRequest {
    string name = 1;
    string schema = 2;
}

message CreateSchemaResult {
    bool exists = 1;
    string id = 2;
}